cleaned up formatting of code in albums index page; changed column width; added padding to application.css file to make sure that directory links are not hidden by navbar in albums index view

--- a/assessment/app/assets/stylesheets/application.css.scss
+++ b/assessment/app/assets/stylesheets/application.css.scss
@@ -23,6 +23,6 @@
 
 
 body { 
-    padding-top: 150px; 
+    padding-top: 160px; 
     padding-bottom: 60px;
 }
